--- a/src/app/enter-password/enter-password.component.html
+++ b/src/app/enter-password/enter-password.component.html
@@ -1,23 +1,31 @@
 <div class="flex-container">
   <div class="card-access">
     <mat-card>
-      <div>
+      <div class="posImage">
+        <img src="/assets/americas.png" alt="Americas comunications" class="logo">
+      </div>
+      <div class="newUser">
+        <span class="newUserText">
+            Enter password for the new user
+        </span>
+      </div>
+      <mat-card-content>
         <form (ngSubmit)="submit()" [formGroup]="enterPassForm">
           <mat-form-field class="item-full-width" formGroupName="passwords">
             <input matInput type="password" placeholder="Password" formControlName="newPassword">
             <mat-error *ngIf="enterPassForm.controls['passwords'].get('newPassword').invalid">
-              {{getErrorMessage(enterPassForm.controls['passwords'].get('newPassword'))}}            
+              {{getErrorMessage(enterPassForm.controls['passwords'].get('newPassword'))}}
             </mat-error>
           </mat-form-field>
           <mat-form-field class="item-full-width" formGroupName="passwords">
             <input matInput type="password" placeholder="Repeat Password" formControlName="repeatPassword">
           </mat-form-field>
           <div class="itemsb">
-            <button mat-raised-button color="primary"  [disabled]="!enterPassForm.valid" >Save</button>
+            <button mat-raised-button color="primary" [disabled]="!enterPassForm.valid">Save</button>
             <!-- <button mat-button color="primary" (click)="recoverPassword()">Recover password</button> -->
           </div>
         </form>
-      </div>  
+      </mat-card-content>
 
 
       <!-- <div *ngIf="!isLogin">
@@ -33,7 +41,6 @@
       </div>  -->
 
     </mat-card>
-    
+
   </div>
 </div>
-
