--- a/src/app/dashboard/detail-all-events/compound-onlyreading/compound-onlyreading.component.html
+++ b/src/app/dashboard/detail-all-events/compound-onlyreading/compound-onlyreading.component.html
@@ -1,50 +1,83 @@
 <mat-card>
   <mat-card-content>
-    <div class="container" *ngIf="data">
-      <div>
-        <span class="negrilla">
-          Location type: </span>{{data.locationType}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Location description: </span>{{data.locationDescription}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Location fence: </span>{{data.locationFence ? 'Yes' : 'No'}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Fence type: </span>{{data.fenceType}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Fence size: </span>{{data.fenceSize}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Access: </span>{{data.accessType}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Building type: </span>{{data.buildingType}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Building owner if available: </span>{{data.buildingOwnerIfAvailable}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Genset: </span>{{data.genset ? 'Yes':'No'}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Fuel propone tank type: </span>{{data.fuePropaneTankType ? 'Yes':'No'}}
-      </div>
-      <div>
-        <span class="negrilla">
-          Propone fuel tank size: </span>{{data.propaneFuelTankSize}}
-      </div>
+    <div class="container">
+
+      <form class="example-form" (ngSubmit)="updateData()" [formGroup]="compoundForm">
+
+        <div class="conte">
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Location type" formControlName="location_type">
+              <mat-option *ngFor="let food of locationType" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="input">
+            <input matInput placeholder="Location description" formControlName="location_description">
+          </mat-form-field>
+        </div>
+
+        <div class="conte">
+          <div class="input">
+            <mat-slide-toggle formControlName="location_fence">Location fence</mat-slide-toggle>
+          </div>
+
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Fence type" formControlName="fence_type">
+              <mat-option *ngFor="let food of fencetype" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+
+        <div class="conte">
+          <mat-form-field class="input">
+            <input matInput placeholder="Fence size" formControlName="fence_size">
+          </mat-form-field>
+
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Access" formControlName="access">
+              <mat-option *ngFor="let food of access" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+        </div>
+
+        <div class="conte">
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Building type" formControlName="building_type">
+              <mat-option *ngFor="let food of buildingtype" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="input">
+            <input matInput placeholder="Building owner if available" formControlName="building_owner_if_available">
+          </mat-form-field>
+        </div>
+
+        <div class="conte">
+          <div class="input">
+            <mat-slide-toggle formControlName="genset">Genset</mat-slide-toggle>
+          </div>
+          <div class="input">
+            <mat-slide-toggle formControlName="fue_Propane_tank_type">Fuel propane tank type</mat-slide-toggle>
+          </div>
+        </div>
+        <!--  -->
+        <div class="conte">
+          <mat-form-field class="input">
+            <input matInput placeholder="Propane fuel tank size (Gallons)" formControlName="propane_fuel_tank_size">
+          </mat-form-field>
+        </div>
+
+      </form>
+
     </div>
   </mat-card-content>
 </mat-card>
