--- a/src/app/dashboard/detail-all-events/services-availables-onlyreading/services-availables-onlyreading.component.html
+++ b/src/app/dashboard/detail-all-events/services-availables-onlyreading/services-availables-onlyreading.component.html
@@ -3,36 +3,54 @@
     <mat-tab-group>
       <mat-tab label="Form data">
         <!-- Form data init-->
-        <div class="container" *ngIf="data">
-          <div><span class="negrilla">
-            Public Private wifi: </span>{{data.publicprivatewifidesc}}
-          </div>
-          <div><span class="negrilla">
-            Wifi: </span>{{data.wifi ? 'Yes':'No'}}
-          </div>
-          <div><span class="negrilla">
-            Phone: </span>{{data.phone ? 'Yes':'No'}}
-          </div>
-          <div><span class="negrilla">
-            Microwave: </span>{{data.microwave ? 'Yes':'No'}}
-          </div>
-          <div><span class="negrilla">
-            Fiber: </span>{{data.fiber ? 'Yes':'No'}}
-          </div>
-          <div><span class="negrilla">
-            Satellite: </span>{{data.satellite ? 'Yes':'No'}}
-          </div>
-          <div><span class="negrilla">
-            Cable: </span>{{data.cable ? 'Yes':'No'}}
-          </div>
-          <div><span class="negrilla">
-            Water: </span>{{data.water ? 'Yes':'No'}}
-          </div>
+        <div class="container">
+          <form class="example-form" (ngSubmit)="updateData()" [formGroup]="servicesAvailableForms">
+
+
+            <div class="toggle-container">
+              <div>
+                <mat-slide-toggle formControlName="wifi">Wifi</mat-slide-toggle>
+              </div>
+            </div>
+
+            <div class="toggle-container">
+              <mat-form-field style="width: 100%; padding-left: 10px">
+                <mat-select placeholder="Public Private wifi" formControlName="public_private_wifi">
+                  <mat-option *ngFor="let food of publicPrivatewifi" [value]="food.value">
+                    {{ food.viewValue }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+            </div>
+
+            <div class="toggle-container">
+              <div>
+                <mat-slide-toggle formControlName="phone">Phone</mat-slide-toggle>
+              </div>
+              <div>
+                <mat-slide-toggle formControlName="microwave">Microwave</mat-slide-toggle>
+              </div>
+              <div>
+                <mat-slide-toggle formControlName="fiber">Fiber</mat-slide-toggle>
+              </div>
+              <div>
+                <mat-slide-toggle formControlName="satellite">Satellite</mat-slide-toggle>
+              </div>
+              <div>
+                <mat-slide-toggle formControlName="cable">Cable</mat-slide-toggle>
+              </div>
+              <div>
+                <mat-slide-toggle formControlName="water">Water</mat-slide-toggle>
+              </div>
+            </div>
+          </form>
         </div>
         <!-- Form data Finished-->
       </mat-tab>
       <mat-tab label="Grid list">
-        <app-service-available-grid *ngIf="idServiceAvailable !== undefined && idServiceAvailable !== null" [idServiceAvailable]="idServiceAvailable" ></app-service-available-grid>
+        <app-service-available-grid [isEditable]="false" *ngIf="idServiceAvailable !== undefined && idServiceAvailable !== null"
+          [idServiceAvailable]="idServiceAvailable"></app-service-available-grid>
       </mat-tab>
     </mat-tab-group>
   </mat-card-content>
