--- a/src/app/dashboard/detail-all-events/structure-information-onlyreading/structure-information-onlyreading.component.html
+++ b/src/app/dashboard/detail-all-events/structure-information-onlyreading/structure-information-onlyreading.component.html
@@ -3,87 +3,115 @@
     <mat-tab-group>
       <mat-tab label="Form data">
         <!-- Form data init-->
-        <div class="container" *ngIf="data">
-          <div>
-            <span class="negrilla">
-              Asr number: </span>{{data.asr_number}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Faa: </span>{{data.faa}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Fcc call sign: </span>{{data.fcc_call_sign}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Owner: </span>{{data.owner}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Manufacturer: </span>{{data.manufacturer}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Drawing number: </span>{{data.drawingNumber}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Design number: </span>{{data.designNumber}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Year built: </span>{{data.yearBuild}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Type: </span>{{data.structureInformationType}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Height: </span>{{data.height}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Leg type: </span>{{data.legType}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Sections: </span>{{data.sections}}
-          </div>
-          <div>
-            <span class="negrilla">
-              General condition: </span>{{data.generalConditionType}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Tower size: </span>{{data.towerSize}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Top of taper: </span>{{data.topOfTaper}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Leg size: </span>{{data.legSize}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Caisson height: </span>{{data.caissonHeight}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Latitude: </span>{{data.latitude}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Longitude: </span>{{data.longitude}}
-          </div>
-          <div>
-            <span class="negrilla">
-              Ground elevation: </span>{{data.groundElevation}}
-          </div>
+        <div class="container">
+          <form class="example-form" (ngSubmit)="updateData()" [formGroup]="structureInformationForm">
+
+            <mat-form-field class="input">
+              <input matInput placeholder="ASR Number" formControlName="asr_number">
+            </mat-form-field>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="FAA" formControlName="faa">
+              </mat-form-field>
+              <mat-form-field class="input">
+                <input matInput placeholder="FCC Call Sign" formControlName="fcc_call_sign">
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Owner" formControlName="owner">
+              </mat-form-field>
+              <mat-form-field class="input">
+                <input matInput placeholder="Manufacturer" formControlName="manufacturer">
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Drawing number" formControlName="drawing_number">
+              </mat-form-field>
+              <mat-form-field class="input">
+                <input matInput placeholder="Design number" formControlName="design_number">
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Year built" formControlName="year_built">
+              </mat-form-field>
+              <mat-form-field style="width: 100%; padding-left: 10px">
+                <mat-select placeholder="Type" formControlName="type">
+                  <mat-option *ngFor="let food of type" [value]="food.value">
+                    {{ food.viewValue }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Height" formControlName="height">
+              </mat-form-field>
+
+              <mat-form-field style="width: 100%; padding-left: 10px">
+                <mat-select placeholder="Leg type" formControlName="leg_type">
+                  <mat-option *ngFor="let food of legtype" [value]="food.value">
+                    {{ food.viewValue }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Sections" formControlName="sections">
+              </mat-form-field>
+              <mat-form-field style="width: 100%; padding-left: 10px">
+                <mat-select placeholder="General condition" formControlName="general_condition">
+                  <mat-option *ngFor="let food of generalcondition" [value]="food.value">
+                    {{ food.viewValue }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Tower size" formControlName="tower_size">
+              </mat-form-field>
+              <mat-form-field class="input">
+                <input matInput placeholder="Top of taper" formControlName="top_of_taper">
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Leg size" formControlName="leg_size">
+              </mat-form-field>
+              <mat-form-field class="input">
+                <input matInput placeholder="Caisson height" formControlName="caisson_height">
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Latitude" formControlName="latitude">
+              </mat-form-field>
+              <mat-form-field class="input">
+                <input matInput placeholder="Longitude" formControlName="longitude">
+              </mat-form-field>
+            </div>
+
+            <div class="conte">
+              <mat-form-field class="input">
+                <input matInput placeholder="Ground elevation" formControlName="ground_elevation">
+              </mat-form-field>
+            </div>
+
+          </form>
         </div>
         <!-- Form data Finished-->
 
