--- a/src/app/dashboard/forms/compound/compound.component.html
+++ b/src/app/dashboard/forms/compound/compound.component.html
@@ -5,11 +5,13 @@
       <form class="example-form" (ngSubmit)="updateData()" [formGroup]="compoundForm">
 
         <div class="conte">
-          <mat-select class="input" placeholder="Location type" formControlName="location_type">
-            <mat-option *ngFor="let food of locationType" [value]="food.value">
-              {{ food.viewValue }}
-            </mat-option>
-          </mat-select>
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Location type" formControlName="location_type">
+              <mat-option *ngFor="let food of locationType" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
           <mat-form-field class="input">
             <input matInput placeholder="Location description" formControlName="location_description">
@@ -21,11 +23,13 @@
             <mat-slide-toggle formControlName="location_fence">Location fence</mat-slide-toggle>
           </div>
 
-          <mat-select class="input" placeholder="Fence type" formControlName="fence_type">
-            <mat-option *ngFor="let food of fencetype" [value]="food.value">
-              {{ food.viewValue }}
-            </mat-option>
-          </mat-select>
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Fence type" formControlName="fence_type">
+              <mat-option *ngFor="let food of fencetype" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
 
         <div class="conte">
@@ -33,19 +37,24 @@
             <input matInput placeholder="Fence size" formControlName="fence_size">
           </mat-form-field>
 
-          <mat-select class="input" placeholder="Access" formControlName="access">
-            <mat-option *ngFor="let food of access" [value]="food.value">
-              {{ food.viewValue }}
-            </mat-option>
-          </mat-select>
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Access" formControlName="access">
+              <mat-option *ngFor="let food of access" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
 
         <div class="conte">
-          <mat-select class="input" placeholder="Building type" formControlName="building_type">
-            <mat-option *ngFor="let food of buildingtype" [value]="food.value">
-              {{ food.viewValue }}
-            </mat-option>
-          </mat-select>
+          <mat-form-field style="width: 100%; padding-left: 10px">
+            <mat-select placeholder="Building type" formControlName="building_type">
+              <mat-option *ngFor="let food of buildingtype" [value]="food.value">
+                {{ food.viewValue }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
           <mat-form-field class="input">
             <input matInput placeholder="Building owner if available" formControlName="building_owner_if_available">
           </mat-form-field>
@@ -62,7 +71,7 @@
         <!--  -->
         <div class="conte">
           <mat-form-field class="input">
-            <input matInput placeholder="Propane fuel tank size" formControlName="propane_fuel_tank_size">
+            <input matInput placeholder="Propane fuel tank size (Gallons)" formControlName="propane_fuel_tank_size">
           </mat-form-field>
         </div>
 
