--- a/src/app/dashboard/forms/osurvey-information/osurvey-information.component.html
+++ b/src/app/dashboard/forms/osurvey-information/osurvey-information.component.html
@@ -8,6 +8,17 @@
           <input matInput placeholder="Surveyor" formControlName="surveyor">
         </mat-form-field>
 
+
+        <div class="conte">
+          <mat-form-field class="input">
+            <input matInput placeholder="Identifier" formControlName="identifier">
+          </mat-form-field>
+
+          <mat-form-field class="input">
+            <input matInput placeholder="Site name" formControlName="site_name">
+          </mat-form-field>
+        </div>
+
         <div class="conte">
           <mat-form-field class="input">
             <input matInput placeholder="Date create" formControlName="date_create">
