--- a/src/app/dashboard/forms/picture-log/picture-log.component.html
+++ b/src/app/dashboard/forms/picture-log/picture-log.component.html
@@ -3,19 +3,33 @@
     <div class="container">
       <div class="list">
         <mat-list>
-          <mat-list-item *ngFor="let d of data" class="item" (click)="selectImage(d)">
-            <mat-icon matListIcon>photo</mat-icon>
+          <mat-list-item *ngFor="let d of data; let i = index" class="item" (click)="selectImage(d, i)">
+            <mat-icon color="primary" matListIcon>photo</mat-icon>
             <h3 matLine> {{d.description}} </h3>
           </mat-list-item>
         </mat-list>
+        <div *ngIf="isEditable">
+            <button color="primary" mat-fab (click)="getActionImage(3)">
+              <mat-icon aria-label="Example icon-button with a heart icon">playlist_add</mat-icon>
+            </button>
+          </div>
       </div>
       <div class="photo">
-        <img *ngIf="photoSelected !== undefined && photoSelected !== null" [src]="image" >
+        <div *ngIf="!stateLoadImage" class="loadSpiner">
+          <mat-spinner class="spiner"></mat-spinner>
+          <div>Load image...</div>
+        </div>
+        <div *ngIf="photoSelected !== undefined && photoSelected !== null && stateLoadImage === true">
+          <span class="namePicture">{{nameImage}}</span>
+        </div>
+        <img *ngIf="photoSelected !== undefined && photoSelected !== null" [src]="image">
         <div *ngIf="isEditable">
-          <mat-icon *ngIf="photoSelected !== undefined && photoSelected !== null" matListIcon (click)="getEditImage()">mode_edit</mat-icon>
+          <mat-icon *ngIf="photoSelected !== undefined && photoSelected !== null" class="iconoUpd" matTooltip="Update image" matListIcon
+            (click)="getActionImage(1)">mode_edit</mat-icon>
+          <mat-icon *ngIf="deleteImage && photoSelected !== undefined && photoSelected !== null" class="iconoDel" matTooltip="Delete image"
+            (click)="getActionImage(2)" matListIcon>close</mat-icon>
         </div>
       </div>
-
     </div>
   </mat-card-content>
 </mat-card>
