--- a/src/app/dashboard/forms/picture-log/upload-file/upload-file.component.html
+++ b/src/app/dashboard/forms/picture-log/upload-file/upload-file.component.html
@@ -1,6 +1,14 @@
-<div>
-  <input type="file" #fileInput placeholder="Upload file..." />
-</div>
-<div>
-  <button type="button" (click)="upload()">Upload</button>
-</div>
+<p-fileUpload name="images" withCredentials="true" invalidFileTypeMessageSummary="Invalid file type" invalidFileTypeMessageDetail="Admitted types .png,.jpg,.jpeg"
+  invalidFileSizeMessageSummary="Invalid file size" invalidFileSizeMessageDetail="Maximum size 2MB" chooseLabel="Upload image"
+  [url]="URL_UPLOAD" (onUpload)="onUpload($event)" auto="auto" maxFileSize="2000000" accept=".png,.jpg,.jpeg,.PNG,.JPG,.JPEG">
+  <ng-template pTemplate="content">
+    <div class="mensajeUpload">
+      <div>
+        Release your image here
+      </div>
+      <div class="upload-icon">
+        <i class="fa fa-upload fa-5x" aria-hidden="true"></i>
+      </div>
+    </div>
+  </ng-template>
+</p-fileUpload>
