--- a/src/app/dashboard/list-users/update-user/update-user.component.html
+++ b/src/app/dashboard/list-users/update-user/update-user.component.html
@@ -3,7 +3,7 @@
     <form class="example-form" (ngSubmit)="onSubmit()" [formGroup]="updateUserForm">
 
       <mat-form-field class="full-width">
-        <input matInput placeholder="Email username" value="juan" formControlName="emailUsername">
+        <input matInput placeholder="Email username"  formControlName="emailUsername">
       </mat-form-field>
 
       <mat-form-field class="full-width">
