--- a/src/app/dashboard/sidenav-menu/sidenav-menu.component.html
+++ b/src/app/dashboard/sidenav-menu/sidenav-menu.component.html
@@ -2,7 +2,8 @@
   <div class="header-sidenav">
     <mat-card class="example-card">
       <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
+        <div mat-card-avatar class="example-header-image">
+        </div>
         <div>
           <mat-card-title>{{fullName}}</mat-card-title>
           <mat-card-subtitle>{{emailUserName}}</mat-card-subtitle>
