--- a/src/app/enter-password/enter-password.component.css
+++ b/src/app/enter-password/enter-password.component.css
@@ -20,3 +20,22 @@
 .item-full-width {
   width: 100%;
 }
+
+.posImage {
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
+
+.logo {
+  width: 250px;
+  height: auto;
+}
+
+.newUser {
+  text-align: center;
+}
+
+.newUserText {
+  color: rgb(179, 179, 179);
+}
